# form-checker-mvp

./: .gitignore  .tool-versions  README.md  REDESIGN.md  alternative_pose_estimation.py  final_test.py  pyproject.toml  run_app.py  test_basic_functionality.py  test_comparison.py  test_comparison_realistic.py  test_pose_estimation.py  test_without_pose.py
analysis/: README.md  __init__.py  __main__.py  feedback.py  report.py  serve.py  serve_analysis.py
docs/issues/: 001-contact-and-phase-detection.md  README.md
notebooks/: P0_gvhmr_serve_validation.ipynb  README.md
src/: __init__.py  comparison_analyzer.py  comparison_ui.py  main.py  pose_estimator.py
src/frame_loader/: __init__.py  frame_loader.py
src/metrics_engine/: __init__.py  metrics_engine.py
src/visualizer/: __init__.py  visualizer.py
src/yolo_detector/: __init__.py  yolo_detector.py
tests/: synth.py  test_serve_analysis.py
